force-app/main/default/objects/Structural_Analysis_Default__mdt/Structural_Analysis_Default__mdt.object-meta.xml
<CustomObject>
    <label>Structural Analysis Default</label>
    <pluralLabel>Structural Analysis Defaults</pluralLabel>
</CustomObject>