force-app/main/default/objects/Structural_Analysis_Default__mdt/fields/Combined_Load__c.field-meta.xml
<CustomField>
    <fullName>Combined_Load__c</fullName>
    <label>Combined Load</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>