force-app/main/default/objects/Structural_Analysis_Default__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>