force-app/main/default/objects/Structural_Analysis_Default__mdt/fields/Heatsoak__c.field-meta.xml
<CustomField>
    <fullName>Heatsoak__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Heatsoak</label>
    <type>Checkbox</type>
</CustomField>