force-app/main/default/objects/Structural_Analysis_Default__mdt/fields/Reference_Wind_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Reference_Wind_Pressure__c</fullName>
    <label>Reference Wind Pressure</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>