force-app/main/default/objects/Structural_Analysis_Default__mdt/fields/Reference_Windspeed__c.field-meta.xml
<CustomField>
    <fullName>Reference_Windspeed__c</fullName>
    <label>Reference Windspeed</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>