force-app/main/default/objects/Structural_Analysis_Default__mdt/fields/Seals_between_Panes__c.field-meta.xml
<CustomField>
    <fullName>Seals_between_Panes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seals between Panes</label>
    <type>Checkbox</type>
</CustomField>