force-app/main/default/objects/Structural_Analysis_Default__mdt/fields/Snowload__c.field-meta.xml
<CustomField>
    <fullName>Snowload__c</fullName>
    <label>Snowload</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>